--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ opencv-python==4.10.0.84
 torch==2.4.1+cu121
 torchaudio==2.4.1+cu121
 torchvision==0.19.1+cu121
+fastapi==0.70.0
+uvicorn==0.15.0
+requests==2.26.0
