--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ opencv-python==4.10.0.84
 torch==2.4.1+cu121
 torchaudio==2.4.1+cu121
 torchvision==0.19.1+cu121
-fastapi==0.70.0
-uvicorn==0.15.0
-requests==2.26.0
+fastapi==0.115.2
+uvicorn==0.32.0
+requests==2.32.3
+streamlit==1.39.0
+streamlit-drawable-canvas=0.9.3
