--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 matplotlib==3.9.2
 numpy==1.26.3
 opencv-python==4.10.0.84
-torch==2.4.1+cu121
-torchaudio==2.4.1+cu121
-torchvision==0.19.1+cu121
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
 fastapi==0.115.2
 uvicorn==0.32.0
 requests==2.32.3
